# Resonance

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
demos/: README.md  create_sample_images.py  download_real_images.py  test_data_loading.py  verify_real_images.py
demos/data/: demo_dpo.json  demo_eval_vqa.json  demo_sft.json
demos/scripts/: demo_dpo.sh  demo_eval.sh  demo_sft.sh
docs/: CustomizedModel.md  EvaluationGuide.md  TrainingArguments.md
scripts/: ddpo_instructblip.sh  ddpo_llava.sh  ddpo_qwenvl.sh  dpo_instructblip.sh  dpo_internlmxc2vl7b.sh  dpo_llava.sh  dpo_llavanext.sh  dpo_qwenvl.sh  kto_instructblip.sh  kto_llava.sh  kto_llavanext.sh  kto_qwenvl.sh  ppo_qwenvl.sh  rm_qwenvl.sh  sft_instructblip.sh  sft_llava.sh  sft_llavanext.sh  sft_qwenvl.sh
scripts/eval/: config.sh  mathvista.sh  mmbench.sh  mmbench_sgl.sh  mme.sh  mme_sgl.sh  mmmu.sh  mmvet.sh  mmvet_sgl.sh  pope.sh  pope_sgl.sh  resonance.sql  seedbench.sh  seedbench_generate.sh  seedbench_sgl.sh  vqa.sh
src/resonance/: __init__.py  dpo.py  merge_peft_model.py  ppo.py  reward_modeling.py  sft.py
src/resonance/base/: collator.py  model.py  processor.py  trainer.py
src/resonance/cli/: __init__.py  train.py
src/resonance/core/config/: __init__.py  algorithms.py  base.py  factory.py
src/resonance/core/data/: __init__.py  processor.py
src/resonance/core/trainers/: __init__.py  base.py  factory.py
src/resonance/eval/: utils.py
src/resonance/evaluation/: __init__.py
src/resonance/models/: utils.py
src/resonance/utils/: __init__.py  auto_load.py  common.py  data.py  diff_lib.py  model_utils.py
(+34 files in other folders)
