[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "resonance"
version = "0.0.1"
dependencies = [
    "numpy",
    "loguru",
    "torch",
    "torchvision",
    "deepspeed",
    "transformers>=4.44.0",
    "peft>=0.8.0",
    "trl>=0.9.0",
    "datasets>=2.14.0",
    "einops",
    "tiktoken",
    "matplotlib",
    "pillow",
    "transformers_stream_generator",
    "wandb",
    "jsonlines",
    "scikit-learn",
    "pandas",
    "pymysql",
    "openpyxl",
    "gradio_client",
    "pre-commit",
    "accelerate>=0.20.0"
]
requires-python = ">=3.10"
authors = [
  {name = "Frank Chen", email = "frankchen98@163.com"},
]
maintainers = [
  {name = "Frank Chen", email = "frankchen98@163.com"},
]
description = "Resonance: Where Machine Vision Meets Human Wisdom - Built for Vision-Language Models with Wisdom."
keywords = ["pytorch","RLHF","VLM","vision-language","alignment","resonance"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*egg-info"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  __pycache__
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
remove-duplicate-keys = true
in-place = true
recursive = true
